@@ -10,15 +10,15 @@ INSTANCE Spell_ChargeZap (C_Spell_Proto)
 {
 	time_per_mana			= 100;
 	damage_per_level		= SPL_Damage_ChargeZap;
-	damageType				= DAM_MAGIC;	
+	damageType				= DAM_MAGIC;
 	canTurnDuringInvest     = TRUE;
 };
 
-func int Spell_Logic_ChargeZap (var int manaInvested) 
+func int Spell_Logic_ChargeZap (var int manaInvested)
 {
-	if (self.attribute[ATR_MANA]<STEP_ChargeZap) 
+	if (self.attribute[ATR_MANA]<STEP_ChargeZap)
 	{
-		return SPL_DONTINVEST;	
+		return SPL_DONTINVEST;
 	};
 
 	if (manaInvested <= STEP_ChargeZap*1)
@@ -31,11 +31,11 @@ func int Spell_Logic_ChargeZap (var int manaInvested)
 	{
 		self.attribute[ATR_MANA] = (self.attribute[ATR_MANA] - STEP_ChargeZap);
 
-		if (self.attribute[ATR_MANA]<0) 
+		if (self.attribute[ATR_MANA]<0)
 		{
 	   		self.attribute[ATR_MANA]=0;
 		};
-			
+
 		self.aivar[AIV_SpellLevel] = 2;
 		return SPL_NEXTLEVEL; //Lev2 erreicht
 	}
@@ -44,47 +44,58 @@ func int Spell_Logic_ChargeZap (var int manaInvested)
 	{
 		self.attribute[ATR_MANA] = (self.attribute[ATR_MANA] - STEP_ChargeZap);
 
-		if (self.attribute[ATR_MANA]<0) 
+		if (self.attribute[ATR_MANA]<0)
 		{
 	   		self.attribute[ATR_MANA]=0;
 		};
-			
+
 		self.aivar[AIV_SpellLevel] = 3;
 		return SPL_NEXTLEVEL; //Lev3 erreicht
 	}
 	else if (manaInvested > (STEP_ChargeZap*3))
 	&& (self.aivar[AIV_SpellLevel] <= 3)
-	{	
+	{
 		self.attribute[ATR_MANA] = (self.attribute[ATR_MANA] - STEP_ChargeZap);
 
-		if (self.attribute[ATR_MANA]<0) 
+		if (self.attribute[ATR_MANA]<0)
 		{
 	   		self.attribute[ATR_MANA]=0;
 		};
-			
+
 		self.aivar[AIV_SpellLevel] = 4;
 		return SPL_NEXTLEVEL; //Lev4 erreicht
 	}
 	else if (manaInvested > (STEP_ChargeZap*3))
 	&& (self.aivar[AIV_SpellLevel] == 4)
 	{
-		return SPL_DONTINVEST;	
+		return SPL_DONTINVEST;
 	};
 
-	return SPL_STATUS_CANINVEST_NO_MANADEC;	
+	return SPL_STATUS_CANINVEST_NO_MANADEC;
 };
 
 func void Spell_Cast_ChargeZap(var int spellLevel)
 {
 	self.attribute[ATR_MANA] = (self.attribute[ATR_MANA] - STEP_ChargeZap);
-	
-	if (self.attribute[ATR_MANA]<0) 
+
+	if (self.attribute[ATR_MANA]<0)
 	{
 		self.attribute[ATR_MANA]=0;
 	};
 
+	if (Hlp_GetInstanceID(other) == Hlp_GetInstanceID(Mod_7314_Ziel_AW))
+	&& (Npc_KnowsInfo(hero, Info_Mod_PlattformAWBeliar_Erzbrocken))
+	&& (Npc_KnowsInfo(hero, Info_Mod_PlattformAWBeliar_Weihwasser))
+	{
+		Mod_BEL_PortalAktiv = 1;
+
+		Mod_BEL_PortalCounter = 3;
+
+		Wld_SendTrigger	("EVT_AW_PORTAL_PFX");
+	};
+
 	B_PrismaAdd(SPL_Damage_ChargeZap*self.aivar[AIV_SpellLevel]);
-	
-	
+
+
 	self.aivar[AIV_SelectSpell] += 1;
 };
